# ElioP2P

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  configuration.md  control-plane.md  development.md
include/eliop2p/base/: config.h  error_code.h  logger.h
include/eliop2p/cache/: chunk_manager.h  lru_cache.h
include/eliop2p/control/: client.h  metadata.h  server.h
include/eliop2p/p2p/: node_discovery.h  transfer.h
include/eliop2p/proxy/: request_handler.h  server.h
include/eliop2p/storage/: oss_client.h  s3_client.h
src/: CMakeLists.txt
src/base/: config.cpp  error_code.cpp  logger.cpp
src/cache/: chunk_manager.cpp  lru_cache.cpp
src/control/: client.cpp  metadata.cpp  server.cpp
src/p2p/: node_discovery.cpp  transfer.cpp
src/proxy/: request_handler.cpp  server.cpp
src/storage/: oss_client.cpp  s3_client.cpp
test/: CMakeLists.txt  test_cache.cpp  test_e2e.cpp  test_functional.cpp  test_gossip.cpp  test_integration.cpp  test_storage.cpp  test_transfer.cpp
